# local_transfert

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.ai-outputs/docs/: index.html  local-file-transfer.html  stability-sessions-history-v1-6-5.html  web-interface.html
.ai-outputs/specs/clipboard-paste/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/controle-it/: architecture.md  business-spec.md
.ai-outputs/specs/hardening-polish/: architecture.md  audit-report.md  business-spec.md
.ai-outputs/specs/host-ui-improvements/: PROGRESS.md
.ai-outputs/specs/host-ux-1/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/host-ux-2/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/host-ux-3/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/host-ux-4/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/local-file-transfer/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/manual-discovery/: audit-report.md
.ai-outputs/specs/multi-os-installer/: ANALYSIS.md
.ai-outputs/specs/native-transfer-parallel/: ANALYSIS.md
.ai-outputs/specs/p2p-perf/: architecture.md  business-spec.md
.ai-outputs/specs/p2p-refactor/: architecture.md  audit-report.md  business-spec.md
.ai-outputs/specs/portail-client-externe/: architecture.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/security-https-tofu/: architecture.md  audit-report.md  business-spec.md
.ai-outputs/specs/stability-sessions-history-v1-6-5/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/transfer-resume/: ANALYSIS.md  architecture.md  audit-report.md  business-spec.md
.ai-outputs/specs/ui-layout-system/: architecture.md  audit-report.md  business-spec.md
.ai-outputs/specs/web-batch-ux/: ANALYSIS.md  architecture.md  audit-report.md  business-spec.md
.ai-outputs/specs/web-interface/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/web-interface-v1-1/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/web-interface-v1-1-8/: architecture.md  audit-report.md  business-spec.md
.ai-outputs/specs/web-p2p/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
.ai-outputs/specs/web-p2p-v1-3/: architecture.md  audit-report.md  business-spec.md  ui-proposal.md
assets/fonts/: README.md
assets/web/: README.md
assets/web/css/: style.css
assets/web/html/: deposit.html  deposit_expired.html  deposit_receipt.html  index.html  login.html
assets/web/js/: README.md  app.js  common.js  download.js  idb.js  login.js  p2p.js  p2p_session.js  p2p_transport.js  p2p_ui.js  peers.js  pin_storage.js  transfer_registry.js  upload.js  web_profile.js
cmake/: Dependencies.cmake  EmbedFile.cmake
docs-agents/: ARCHITECTURE.md  BUSINESS.md  BUSINESS_GROWTH_PLAN.md  CONVERSATION_PROGRESS.md  DEVELOPMENT.md  PROJECT.md  UI_GUIDELINES.md  WEB.md
include/ltr/app/: app_controller.hpp  app_state.hpp
include/ltr/core/: event_bus.hpp  format.hpp  logger.hpp  png_encoder.hpp  shell_open.hpp  types.hpp
include/ltr/domain/: device.hpp  file_meta.hpp  transfer_request.hpp  transfer_session.hpp  transfer_status.hpp
include/ltr/infra/: audit_export_service.hpp  business_policy.hpp  cidr_matcher.hpp  config.hpp  crypto_identity.hpp  deposit_history.hpp  deposit_link.hpp  deposit_link_repository.hpp  deposit_link_service.hpp  deposit_receipt.hpp  deposit_result.hpp  deposit_session.hpp  deposit_session_repository.hpp  deposit_session_service.hpp  deposit_token_generator.hpp  filesystem_service.hpp  (+8 more)
scripts/: generate_icons.py
src/: main.cpp
src/app/: app_controller.cpp
src/core/: event_bus.cpp  format.cpp  logger.cpp  png_encoder.cpp  shell_open.cpp
src/domain/: transfer_session.cpp
src/infra/: audit_export_service.cpp  business_policy.cpp  cidr_matcher.cpp  config.cpp  crypto_identity.cpp  deposit_history.cpp  deposit_link.cpp  deposit_link_repository.cpp  deposit_link_service.cpp  deposit_receipt.cpp  deposit_session.cpp  deposit_session_repository.cpp  deposit_session_service.cpp  deposit_token_generator.cpp  filesystem_service.cpp  hash_service.cpp  known_peers.cpp  peers_history.cpp  policy_enforcement.cpp  quota_service.cpp  resume_sidecar.cpp  retention_service.cpp  transfer_history.cpp
src/network/: broadcast_socket.cpp  discovery_service.cpp  protocol.cpp  transfer_client.cpp  transfer_server.cpp
src/ui/: animation.cpp  clip_scope.cpp  clipboard_paste_mac.mm  clipboard_paste_stub.cpp  clipboard_paste_win.cpp  dpi.cpp  drag_drop_mac.mm  drag_drop_stub.cpp  drag_drop_win.cpp  icon_library.cpp  layout.cpp  rounded_rect.cpp  screen.cpp  theme.cpp  ui_app.cpp
src/web/: README.md  cert_manager.cpp  display_name.cpp  download_ticket_store.cpp  http_server.cpp  qr_code.cpp  range_parser.cpp  self_binary_mac.cpp  self_binary_posix.cpp  self_binary_win.cpp  sse_broadcaster.cpp  sse_channel.cpp  static_asset_registry.cpp  streaming_zip_source.cpp  web_service.cpp  web_session_store.cpp  web_upload_announce.cpp
tests/: CMakeLists.txt  test_audit_export_service.cpp  test_breakpoint.cpp  test_business_policy.cpp  test_cidr_matcher.cpp  test_clipboard_stub.cpp  test_deposit_history.cpp  test_deposit_link_service.cpp  test_deposit_receipt_service.cpp  test_deposit_routes.cpp  test_deposit_session_service.cpp  test_display_name.cpp  test_download_ticket.cpp  test_hash.cpp  test_http_smoke.cpp  test_known_peers.cpp  test_label_ellipsis.cpp  test_layout_box.cpp  test_p2p_signal_routes.cpp  test_peers_history.cpp  test_persistent_token.cpp  test_png_encoder.cpp  test_policy_enforcement.cpp  test_protocol.cpp  test_qr_code.cpp  test_quota_service.cpp  test_range_parser.cpp  test_resume_sidecar.cpp  test_retention_service.cpp  test_streaming_zip.cpp  test_transfer_history.cpp  test_web_folder_logic.js  test_web_session_dedup.cpp  test_web_session_store.cpp
(+105 files in other folders)
